<resources>
    <string name="app_name">chatApp</string>
    <string name="editTextUserName">Username</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="logout">logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_have_account">Not have a account? Register here.</string>
    <string name="write_your_message_here">Write your message here…</string>
    <string name="textview">TextView</string>
    <string name="image">image</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="have_a_account">Already have a account? Login here!</string>
    <string name="chats_fragment">Chats fragment</string>
</resources>